colors and images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Jessica Sonnet</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://file.myfontastic.com/Syr2dLnR7GX67JNZiadNei/icons.css" rel="stylesheet">
@@ -19,8 +19,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="http://i.imgur.com/R618LVC.png" alt="" /></span>
-					<h1 id="logo"><a href="#">Jessica Sonnet</a></h1>
+					<span class="image avatar"><img src="assets/img/icon.png" alt="" /></span>
+					<h1 id="logo" style="font-family: btscript"><a href="#">Jessica Sonnet</a></h1>
 					<p>Online digital artist, <br>
 						also known as Valkyrien27.</p>
 				</header>
@@ -56,9 +56,9 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Jessica Sonnet</h2>
+										<h2 style="font-family: btscript">Jessica Sonnet</h2>
 									</header>
-									<p>Welcome to my page! I am a new self taught digital artist who is currently trying to branch out into the art world. I appreciate all the support you guys give me! Feel free to take a look around at some of the stuff i have done already and makesure you go follow me online!</p>
+									<p>Welcome to my website! I am a new self taught digital artist who is currently trying to branch out into the art world. I appreciate all the support you guys give me! Feel free to take a look around at some of the stuff i have done already and makesure you go follow me online!</p>
 								</div>
 							</section>
 
