Some changes to reflect new alias

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 				<header>
 					<span class="image avatar"><img src="assets/img/icon.png" alt="" /></span>
 					<h1 id="logo" style="font-family: btscript"><a href="#">Jessica Sonnet</a></h1>
-					<p>Online digital artist, <br>
-						also known as Valkyrien27.</p>
+					<p>Online digital artist.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -34,12 +33,12 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://twitter.com/Valkyrien27" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.twitch.tv/valkyrien27" class="icon fa-twitch"><span class="label">Twitch</span></a></li>
+						<li><a href="https://twitter.com/JessicaSonnet" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.twitch.tv/Jessica_Sonnet" class="icon fa-twitch"><span class="label">Twitch</span></a></li>
 						<li><a href="https://www.instagram.com/jessica_sonnet/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.artstation.com/artist/valkyrien" class="icon icon-artstation"><span class="label">ArtStation</span></a></li>
+						<li><a href="https://www.artstation.com/artist/JessicaSonnet" class="icon icon-artstation"><span class="label">ArtStation</span></a></li>
 						<li><a href="https://discord.gg/R2CqD" class="icon icon-discord-logo-white"><span class="label">Discord</span></a></li>
-						<li><a href="mailto:valkyrien27@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:ahistoryimake@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -108,7 +107,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>You can contact me at <a href="mailto:valkyrien27@gmail.com">valkyrien27@gmail.com</a></p>
+									<p>You can contact me at <a href="mailto:ahistoryimake@gmail.com">ahistoryimake@gmail.com</a></p>
 								</div>
 							</section>
 
